# ModernCppFaturesAnalysis

./: .gitignore  CMakeLists.txt
01.NewBaseType/: 1-1.cpp
04.Decltype/: 4-1.cpp
05.returnLater/: 5-1.cpp  5-2.cpp  5-3.cpp
06.rvalueReference/: 6-1.cpp  6-2.cpp  6-3.cpp  6-4.cpp  6-5.cpp  6-6.cpp  6-7.cpp  6-8.cpp  6-9.cpp  CMakeLists.txt
07.lambda/: 7-1.cpp  7-10.cpp  7-11.cpp  7-2.cpp  7-3.cpp  7-4.cpp  7-5.cpp  7-6.cpp  7-7.cpp  7-8.cpp  7-9.cpp
08.noStaticValInitial/: 8-1.cpp
09.initializerList/: 9-1.cpp  9-2.cpp  9-3.cpp  9-4.cpp  9-5.cpp
10.defaultAndDelete/: 10-1.cpp  10-10.cpp  10-2.cpp  10-3.cpp  10-4.cpp  10-5.cpp  10-6.cpp  10-7.cpp  10-8.cpp  10-9.cpp
11.unrestrictedUnionType/: 11-1.cpp  11-2.cpp  11-3.cpp  11-4.cpp  11-5.cpp
12.delegateConstructor/: 12-1.cpp  12-10.cpp  12-11.cpp  12-2.cpp  12-3.cpp  12-4.cpp  12-5.cpp  12-6.cpp  12-7.cpp  12-8.cpp  12-9.cpp
13.inheritConstructor/: 13-1.cpp  13-2.cpp  13-3.cpp  13-4.cpp  13-5.cpp  13-6.cpp  13-7.cpp
14.strongEnumerationType/: 14-1.cpp  14-10.cpp  14-11.cpp  14-12.cpp  14-13.cpp  14-2.cpp  14-3.cpp  14-4.cpp  14-5.cpp  14-6.cpp  14-7.cpp  14-8.cpp  14-9.cpp
15.extendedAggregateType/: 15-1.cpp  15-2.cpp  15-3.cpp  15-4.cpp  15-5.cpp  15-6.cpp
16.overrideAndFinal/: 16-1.cpp  16-2.cpp  16-3.cpp  16-4.cpp  16-5.cpp
17.forRange/: 17-1.cpp  17-2.cpp  17-3.cpp
18.ifSwitchSupportCondition/: 18-1.cpp  18-2.cpp  18-3.cpp  18-4.cpp  18-5.cpp  18-6.cpp
19.static_assert/: 19-1.cpp  19-2.cpp  19-3.cpp
20.structBind/: 20-1.cpp  20-10.cpp  20-11.cpp  20-2.cpp  20-3.cpp  20-4.cpp  20-5.cpp  (+4 more)
(+134 files in other folders)
